--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=JournalApp
 
 # MongoDB Connection:
-spring.data.mongodb.uri=mongodb+srv://JohnLocke117:FShq24o3MRY04l4f@alpha.o5akp.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
+spring.data.mongodb.uri=mongodb+srv://JohnLocke117:Ow3pGQ95Kj3xY1jt@alpha.nnmm2.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
 spring.data.mongodb.database=journalDB
 spring.data.mongodb.auto-index-creation=true
 
 spring.security.user.password=Boeing@747
+
+# ------------TO BE FIXED------------
+spring.main.allow-circular-references=true
