--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=JournalApp
 
 # MongoDB Connection:
-spring.data.mongodb.uri=mongodb+srv://JohnLocke117:Ow3pGQ95Kj3xY1jt@alpha.nnmm2.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
+spring.data.mongodb.uri=mongodb+srv://JohnLocke117:<pass>@alpha.nnmm2.mongodb.net/?retryWrites=true&w=majority&appName=Alpha
 spring.data.mongodb.database=journalDB
 spring.data.mongodb.auto-index-creation=true
 
