--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-# application.properties
-./src/main/resources/application.properties
-
 ### STS ###
 .apt_generated
 .classpath
@@ -34,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# application.properties
+/src/main/resources/application.properties
